--- a/_columns/The_Big_Picture/2023-07-26.md
+++ b/_columns/The_Big_Picture/2023-07-26.md
@@ -1,5 +1,7 @@
 ---
 layout: content
+title: Dow Jones Keeps Win Streak Alive Even After 11th Fed Rate Hike; These Industry Groups Jam
+date: 2023/07/26 19:15 America/Los_Angeles
 ---
 
 
@@ -71,7 +73,7 @@ Doing even better than the Dow Jones industrials? Check out the Dow Jones transp
 That advance truly smothers a 7.2% advance by the Dow Jones Industrial Average.
 
 
-Such a move also strengthens the case — at least from the eyes of market participants — that the economy may in fact avoid a serious slowdown, even after experiencing one of the fastest rises in borrowing costs over decades.
+Such a move also strengthens the case — at least in the eyes of market participants — that the economy may in fact avoid a serious slowdown, even after experiencing one of the fastest rises in borrowing costs over decades.
 
 
 The fed funds target rate, now at a range of 5.25%-5.5%, hit the highest level since the fed funds got cut by 50 basis points to 5.5% on Jan. 31, 2001.
