--- a/_columns/The_Big_Picture/2023-08-02.md
+++ b/_columns/The_Big_Picture/2023-08-02.md
@@ -114,6 +114,19 @@ Bucking the decline? Insurance brokers rallied more than 5% on Wednesday, follow
 Please view the daily performance of all 197 industries at [IBD Data Tables](https://www.investors.com/ibd-data-tables/).
 
 
+
+
+---
+
+
+**[Futures Fall After Nasdaq Breaks Key Levels](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-nasdaq-sell-off-two-cathie-wood-stocks-report-with-apple-amazon-on-tap/)**
+
+
+
+
+---
+
+
 Bulls Vs. Bears Today
 ---------------------
 
@@ -149,9 +162,6 @@ See additional data on the [General Market Indicators chart page](https://www.in
 
 
 [Learning How To Pick Great Stocks? Read Investor's Corner](https://www.investors.com/category/how-to-invest/investors-corner/)
-
-
- 
 
 
 
