--- a/_columns/The_Big_Picture/2023-08-04.md
+++ b/_columns/The_Big_Picture/2023-08-04.md
@@ -66,7 +66,7 @@ In addition, a host of big-name companies will report earnings. Warren Buffett-l
 ---
 
 
-**[Market Rally At Inflection Point; What To Do Now](https://www.investors.com/market-trend/stock-market-today/market-rally-at-inflection-point-warren-buffett-berkshire-earnings-due/)**
+**[Futures: What To Do After Market Skids; 5 Stocks Near Buy Points](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-what-to-as-market-rally-skids-5-stocks-near-buy-points/)**
 
 
 
