--- a/_columns/The_Big_Picture/2023-08-10.md
+++ b/_columns/The_Big_Picture/2023-08-10.md
@@ -44,7 +44,7 @@ Stock Market Earnings: Alibaba, Disney Jump
 On Thursday, **Alibaba** ([BABA](https://research.investors.com/quote.aspx?symbol=BABA)), **Walt Disney** ([DIS](https://research.investors.com/quote.aspx?symbol=DIS)), **Trade Desk** ([TTD](https://research.investors.com/quote.aspx?symbol=TTD)) and **Yeti** ([YETI](https://research.investors.com/quote.aspx?symbol=YETI)) were key earnings movers.
 
 
-[Alibaba shares](https://www.investors.com/research/alibaba-stock-buy-now/) rallied 4.6%. [Disney stock](https://www.investors.com/news/disney-stock-dow-jones-giant-battles-content-costs-streaming-struggles-with-earnings-due/) jumped 4.9% after the company posted mixed results for fiscal Q3 results late Wednesday as it struggles with slowed streaming growth and high content costs.
+[Alibaba shares](https://www.investors.com/research/alibaba-stock-buy-now/) rallied 4.6%. [Disney stock](https://www.investors.com/news/disney-stock-dow-jones-giant-battles-content-costs-streaming-struggles-with-earnings-due/) jumped 4.9% after the company posted mixed results for fiscal Q3 late Wednesday as it struggles with slowed streaming growth and high content costs.
 
 
 [Trade Desk](https://www.investors.com/news/technology/ttd-stock-trade-desk-earnins-q22023/) broke down below its 50-day line, with a 4.7% slide. Finally, Yeti surged more than 17%.
@@ -63,7 +63,7 @@ The S&P 500 edged higher, while the Nasdaq composite moved up 0.1% Thursday. The
 Volume fell on the Nasdaq but rose on the NYSE from the prior session.
 
 
-The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.7% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Amphastar Pharmaceuticals** ([AMPH](https://research.investors.com/quote.aspx?symbol=AMPH)) plunged 14% on its quarterly earnings. Shares plunged through their 50-day line, a sell signal.
+The Innovator IBD 50 ETF ([FFTY](https://research.investors.com/quote.aspx?symbol=FFTY)) dropped 0.7% Thursday. In the [IBD 50](https://research.investors.com/stock-lists/ibd-50/), **Amphastar Pharmaceuticals** ([AMPH](https://research.investors.com/quote.aspx?symbol=AMPH)) plunged 14% on its quarterly earnings. Shares fell through their 50-day line, a sell signal.
 
 
 With heavy doses of institutional selling — the Nasdaq has seven [distribution days](https://www.investors.com/how-to-invest/investors-corner/how-to-spot-stock-market-tops-track-the-distribution-days/) and the S&P 500 has four — IBD recommends a 60%-80% exposure range. Instead of aggressively buying breakouts in this stock market environment, investors should be focused on protecting gains and looking for leading stocks that are holding up the best.
