--- a/_columns/Stock_Of_the_Day/2023-08-11.md
+++ b/_columns/Stock_Of_the_Day/2023-08-11.md
@@ -1,6 +1,7 @@
 ---
 layout: content
 title: Flowserve, Stock Of The Day, Eyes Buy Point Amid Earnings Comeback
+image: 2023-08-11.jpg
 date: 2023-08-11 13:24 -0700
 ---
 
@@ -16,105 +17,6 @@ Flowserve, Stock Of The Day, Eyes Buy Point Amid Earnings Comeback
 
 
 
-
-
-
-
-
-##### 
-Flowserve
-
-
-
-##### 
-Flowserve
-
-
-#### 
-FLS
-
-
-
-
- $
-39.44 
-
-
-
-$0.20
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/arrows/up.png)
-0.5%
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/arrows/down.png)
-40%
-
-
-
-
-
- IBD Stock Analysis 
-* Brief consolidation has aggressive 39.62 entry. Optimum entry was on Aug. 2.
-
-
-
-
-![](https://www.investors.com/wp-content/uploads/2023/08/FLS.png)
-
-
-
-
-
- Composite Rating 
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/composite/green-98.png)
-
-
-98/99
-
-
-
- Industry Group Ranking 
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/group-rating.png)
-
-
- 17/197
-
-
-
-
- Emerging Pattern 
-
-
-![](https://www.investors.com/wp-content/uploads/2019/01/consolidation.png)
-
-Consolidation
-
-
-
-Consolidation
-
-
-
-A sideways pattern that doesn’t fit traditional base definitions. Sometimes will have a handle. 
-
-
-
-
-
-
-
-
-
-
-\* Not real-time data. All data shown was captured at
-1:08PM EDT on
-08/11/2023.
 
 
 **Flowserve** ([FLS](https://research.investors.com/quote.aspx?symbol=FLS)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as it eyes an early buy point after strong earnings and guidance. Flowserve stock rose near highs Friday.
