--- a/_columns/Stock_Of_the_Day/2023-08-10.md
+++ b/_columns/Stock_Of_the_Day/2023-08-10.md
@@ -1,6 +1,7 @@
 ---
 layout: content
 title: A 66% YTD Gain Puts IBD Stock Of The Day In This Bullish Base Pattern
+image: 2023-08-10.jpg
 date: 2023-08-10 14:44 -0700
 ---
 
@@ -16,105 +17,6 @@ A 66% YTD Gain Puts IBD Stock Of The Day In This Bullish Base Pattern
 
 
 
-
-
-
-
-
-##### 
-KB Home
-
-
-
-##### 
-KB Home
-
-
-#### 
-KBH
-
-
-
-
- $
-52.71 
-
-
-
-$1.32
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/arrows/down.png)
-2.4%
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/arrows/down.png)
-56%
-
-
-
-
-
- IBD Stock Analysis 
-* Base has 55.37 buy point. Stock undercut 21-day line in weak trade Thursday.
-
-
-
-
-![](https://www.investors.com/wp-content/uploads/2023/08/KBH.png)
-
-
-
-
-
- Composite Rating 
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/composite/green-98.png)
-
-
-95/99
-
-
-
- Industry Group Ranking 
-
-
-![](https://www.investors.com/wp-content/plugins/investors-sotd-cards/images/group-rating.png)
-
-
- 5/197
-
-
-
-
- Emerging Pattern 
-
-
-![](https://www.investors.com/wp-content/uploads/2019/01/ascendingBase.png)
-
-Ascending Base
-
-
-
-Ascending Base
-
-
-
-A rare pattern consisting of three pullbacks, each ranging from 6% to 25% from the most recent high to low. Each pullback must ascend, with a higher high and a higher low. 
-
-
-
-
-
-
-
-
-
-
-\* Not real-time data. All data shown was captured at
-2:23PM EDT on
-08/10/2023.
 
 
 **KB Home** ([KBH](https://research.investors.com/quote.aspx?symbol=KBH)) is the [IBD Stock Of The Day](https://www.investors.com/category/research/ibd-stock-of-the-day/) for Thursday. KBH stock is building toward a buy point and trading near a 16-year high.
