--- a/_columns/Stock_Of_the_Day/2023-08-11.md
+++ b/_columns/Stock_Of_the_Day/2023-08-11.md
@@ -1,14 +1,9 @@
 ---
-layout: content
+layout: page
 title: Flowserve, Stock Of The Day, Eyes Buy Point Amid Earnings Comeback
 image: /assets/img/stock-of-the-day/2023-08-11.jpg
 date: 2023-08-11 13:24 -0700
 ---
-
-
-Flowserve, Stock Of The Day, Eyes Buy Point Amid Earnings Comeback
-===================================================================
-
 
 
 
