--- a/_columns/Stock_Of_the_Day/2023-08-07.md
+++ b/_columns/Stock_Of_the_Day/2023-08-07.md
@@ -3,12 +3,9 @@ layout: page
 title: Delta Air, IBD Stock Of The Day, Lands Picture-Perfect Pullback
 image: /assets/img/stock-of-the-day/2023-08-07.jpg
 date: 2023-08-07 14:09 -0700
+author: ALAN R. ELLIOTT
 ---
 
-
-
-* [ALAN R. ELLIOTT](https://www.investors.com/author/elliotta/ "Posts by ALAN R. ELLIOTT")
-* 02:09 PM ET 08/07/2023
 
 
 
