--- a/_columns/Stock_Of_the_Day/2023-08-08.md
+++ b/_columns/Stock_Of_the_Day/2023-08-08.md
@@ -3,12 +3,9 @@ layout: page
 title: Ollie's Bargain Outlet Has A Sense Of Humor. And Its Earnings Are No Joke.
 image: /assets/img/stock-of-the-day/2023-08-08.jpg
 date: 2023-08-08 15:53 -0700
+author: ALAN R. ELLIOTT
 ---
 
-
-
-* [ALAN R. ELLIOTT](https://www.investors.com/author/elliotta/ "Posts by ALAN R. ELLIOTT")
-* 03:53 PM ET 08/08/2023
 
 
 
