--- a/_columns/Stock_Of_the_Day/2023-07-31.md
+++ b/_columns/Stock_Of_the_Day/2023-07-31.md
@@ -3,12 +3,9 @@ layout: page
 title: IBD Stock Of The Day: UiPath Blazes Trail To Improved Profits With AI Tools
 image: /assets/img/stock-of-the-day/2023-07-31.jpg
 date: 2023-07-31 16:14 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:14 PM ET 07/31/2023
 
 
 
