--- a/_columns/Stock_Of_the_Day/2023-08-03.md
+++ b/_columns/Stock_Of_the_Day/2023-08-03.md
@@ -3,12 +3,9 @@ layout: page
 title: Amazon Rival Is IBD's Pick Of the Day After The Stock Jumped 10% On Earnings
 image: /assets/img/stock-of-the-day/2023-08-03.jpg
 date: 2023-08-03 12:28 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 12:28 PM ET 08/03/2023
 
 
 
