--- a/_columns/Stock_Of_the_Day/2023-08-04.md
+++ b/_columns/Stock_Of_the_Day/2023-08-04.md
@@ -3,12 +3,9 @@ layout: page
 title: Luxury Homebuilder Lennar, IBD Stock Of The Day, Near Entry As Construction Heats Up
 image: /assets/img/stock-of-the-day/2023-08-04.jpg
 date: 2023-08-04 14:55 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 02:55 PM ET 08/04/2023
 
 
 
