--- a/_columns/Stock_Of_the_Day/2023-08-09.md
+++ b/_columns/Stock_Of_the_Day/2023-08-09.md
@@ -3,12 +3,9 @@ layout: page
 title: SLB Rides Rebounding Oil, Gas Prices
 image: /assets/img/stock-of-the-day/2023-08-09.jpg
 date: 2023-08-09 16:02 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:02 PM ET 08/09/2023
 
 
 
