--- a/_columns/Stock_Of_the_Day/2023-08-10.md
+++ b/_columns/Stock_Of_the_Day/2023-08-10.md
@@ -3,12 +3,9 @@ layout: page
 title: A 66% YTD Gain Puts IBD Stock Of The Day In This Bullish Base Pattern
 image: /assets/img/stock-of-the-day/2023-08-10.jpg
 date: 2023-08-10 14:44 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:44 PM ET 08/10/2023
 
 
 
