--- a/_columns/Stock_Of_the_Day/2023-08-11.md
+++ b/_columns/Stock_Of_the_Day/2023-08-11.md
@@ -3,12 +3,9 @@ layout: page
 title: Flowserve, Stock Of The Day, Eyes Buy Point Amid Earnings Comeback
 image: /assets/img/stock-of-the-day/2023-08-11.jpg
 date: 2023-08-11 13:24 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 01:24 PM ET 08/11/2023
 
 
 
