--- a/_columns/Stock_Of_the_Day/2023-07-18.md
+++ b/_columns/Stock_Of_the_Day/2023-07-18.md
@@ -3,12 +3,9 @@ layout: page
 title: CrowdStrike Is IBD Stock Of The Day As It Prepares Move Into AI
 image: /assets/img/stock-of-the-day/2023-07-18.jpg
 date: 2023-07-18 12:18 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 12:18 PM ET 07/18/2023
 
 
 
