--- a/_columns/Stock_Of_the_Day/2023-07-20.md
+++ b/_columns/Stock_Of_the_Day/2023-07-20.md
@@ -3,12 +3,9 @@ layout: page
 title: IBD Stock Of The Day Novo Nordisk, A Weight-Loss Kingpin, Just Retook Its 50-Day Line
 image: /assets/img/stock-of-the-day/2023-07-20.jpg
 date: 2023-07-20 16:24 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:24 PM ET 07/20/2023
 
 
 
