--- a/_columns/Stock_Of_the_Day/2023-07-24.md
+++ b/_columns/Stock_Of_the_Day/2023-07-24.md
@@ -3,12 +3,9 @@ layout: page
 title: DraftKings, IBD Stock Of The Day, Parlays New Entry With 170% Run-Up In 2023
 image: /assets/img/stock-of-the-day/2023-07-24.jpg
 date: 2023-07-24 16:13 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:13 PM ET 07/24/2023
 
 
 
