--- a/_columns/Stock_Of_the_Day/2023-07-26.md
+++ b/_columns/Stock_Of_the_Day/2023-07-26.md
@@ -3,12 +3,9 @@ layout: page
 title: Boeing, Stock Of The Day, Soars On Earnings As Dow Extends Win Streak
 image: /assets/img/stock-of-the-day/2023-07-26.jpg
 date: 2023-07-26 16:16 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 04:16 PM ET 07/26/2023
 
 
 
