--- a/_columns/Stock_Of_the_Day/2023-07-19.md
+++ b/_columns/Stock_Of_the_Day/2023-07-19.md
@@ -3,12 +3,9 @@ layout: page
 title: Skechers Stock, A Rival To Roger Federer's On Holding, Runs Near Buy Point
 image: /assets/img/stock-of-the-day/2023-07-19.jpg
 date: 2023-07-19 12:52 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 12:52 PM ET 07/19/2023
 
 
 
