--- a/_columns/Stock_Of_the_Day/2023-07-21.md
+++ b/_columns/Stock_Of_the_Day/2023-07-21.md
@@ -3,12 +3,9 @@ layout: page
 title: How AI Chip Growth Is Pushing Broadcom, Stock Of The Day, Toward A Buy Point
 image: /assets/img/stock-of-the-day/2023-07-21.jpg
 date: 2023-07-21 16:41 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:41 PM ET 07/21/2023
 
 
 
