--- a/_columns/Stock_Of_the_Day/2023-07-25.md
+++ b/_columns/Stock_Of_the_Day/2023-07-25.md
@@ -3,12 +3,9 @@ layout: page
 title: Will Palo Alto Networks Stock's Recent Rally Find A Second Wind?
 image: /assets/img/stock-of-the-day/2023-07-25.jpg
 date: 2023-07-25 16:30 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:30 PM ET 07/25/2023
 
 
 
