--- a/_columns/Stock_Of_the_Day/2023-07-27.md
+++ b/_columns/Stock_Of_the_Day/2023-07-27.md
@@ -3,12 +3,9 @@ layout: page
 title: Cruise Line Giant Carnival, IBD Stock Of The Day, Sets Destination For Year High
 image: /assets/img/stock-of-the-day/2023-07-27.jpg
 date: 2023-07-27 16:07 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:07 PM ET 07/27/2023
 
 
 
