--- a/_columns/Stock_Of_the_Day/2023-06-30.md
+++ b/_columns/Stock_Of_the_Day/2023-06-30.md
@@ -3,12 +3,9 @@ layout: page
 title: Oracle Stock: What's Old Is New Again, Thanks To AI And Cloud Computing
 image: /assets/img/stock-of-the-day/2023-06-30.jpg
 date: 2023-06-30 14:20 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 02:20 PM ET 06/30/2023
 
 
 
