--- a/_columns/Stock_Of_the_Day/2023-07-06.md
+++ b/_columns/Stock_Of_the_Day/2023-07-06.md
@@ -3,12 +3,9 @@ layout: page
 title: Adobe, IBD Stock Of The Day, Looks To Monetize Generative AI
 image: /assets/img/stock-of-the-day/2023-07-06.jpg
 date: 2023-07-06 16:50 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:50 PM ET 07/06/2023
 
 
 
