--- a/_columns/Stock_Of_the_Day/2023-07-07.md
+++ b/_columns/Stock_Of_the_Day/2023-07-07.md
@@ -3,12 +3,9 @@ layout: page
 title: IBD Stock Of The Day Salesforce: The 'Tectonic Shift' That Could Add $10 Billion In Sales
 image: /assets/img/stock-of-the-day/2023-07-07.jpg
 date: 2023-07-07 16:20 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:20 PM ET 07/07/2023
 
 
 
