--- a/_columns/Stock_Of_the_Day/2023-07-11.md
+++ b/_columns/Stock_Of_the_Day/2023-07-11.md
@@ -3,12 +3,9 @@ layout: page
 title: Caterpillar, IBD Stock Of The Day, Rolls Past Buy Point Amid Federal Windfall
 image: /assets/img/stock-of-the-day/2023-07-11.jpg
 date: 2023-07-11 18:00 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 06:00 PM ET 07/11/2023
 
 
 
