--- a/_columns/Stock_Of_the_Day/2023-07-13.md
+++ b/_columns/Stock_Of_the_Day/2023-07-13.md
@@ -3,12 +3,9 @@ layout: page
 title: ONON Stock Races Past Buy Point As Its Athletes Rise On Podium
 image: /assets/img/stock-of-the-day/2023-07-13.jpg
 date: 2023-07-13 14:21 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 02:21 PM ET 07/13/2023
 
 
 
