--- a/_columns/Stock_Of_the_Day/2023-07-14.md
+++ b/_columns/Stock_Of_the_Day/2023-07-14.md
@@ -3,12 +3,9 @@ layout: page
 title: Why This AI Stock Takes A Licking But Keeps On Ticking
 image: /assets/img/stock-of-the-day/2023-07-14.jpg
 date: 2023-07-14 16:45 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:45 PM ET 07/14/2023
 
 
 
