--- a/_columns/Stock_Of_the_Day/2023-07-03.md
+++ b/_columns/Stock_Of_the_Day/2023-07-03.md
@@ -3,12 +3,9 @@ layout: page
 title: Marvell Stock: How Custom Data Center Chips Figure In AI Opportunity
 image: /assets/img/stock-of-the-day/2023-07-03.jpg
 date: 2023-07-03 16:37 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:37 PM ET 07/03/2023
 
 
 
