--- a/_columns/Stock_Of_the_Day/2023-07-12.md
+++ b/_columns/Stock_Of_the_Day/2023-07-12.md
@@ -3,12 +3,9 @@ layout: page
 title: Taiwan Semiconductor, IBD Stock Of The Day, Cashing In On AI Chip Production
 image: /assets/img/stock-of-the-day/2023-07-12.jpg
 date: 2023-07-12 17:01 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 05:01 PM ET 07/12/2023
 
 
 
