--- a/_columns/Stock_Of_the_Day/2023-06-15.md
+++ b/_columns/Stock_Of_the_Day/2023-06-15.md
@@ -3,12 +3,9 @@ layout: page
 title: Cybersecurity Firm CyberArk Races Rivals To Build Broad Identity Platform
 image: /assets/img/stock-of-the-day/2023-06-15.jpg
 date: 2023-06-15 17:09 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 05:09 PM ET 06/15/2023
 
 
 
