--- a/_columns/Stock_Of_the_Day/2023-06-16.md
+++ b/_columns/Stock_Of_the_Day/2023-06-16.md
@@ -3,12 +3,9 @@ layout: page
 title: McKesson, IBD Stock Of The Day, Breaks Out Of Lengthy Consolidation, Joins SwingTrader
 image: /assets/img/stock-of-the-day/2023-06-16.jpg
 date: 2023-06-16 16:28 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:28 PM ET 06/16/2023
 
 
 
