--- a/_columns/Stock_Of_the_Day/2023-06-20.md
+++ b/_columns/Stock_Of_the_Day/2023-06-20.md
@@ -3,13 +3,10 @@ layout: page
 title: Housing Rebound Lifts IBD Stock Of The Day Meritage Homes To Buy Point
 image: /assets/img/stock-of-the-day/2023-06-20.jpg
 date: 2023-06-20 14:42 -0700
+author: JED GRAHAM
 ---
 
 ![](https://www.investors.com/wp-content/uploads/2023/06/sotd-for-06-20-2023-desktop.png)
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 02:42 PM ET 06/20/2023
-
 
 
 
