--- a/_columns/Stock_Of_the_Day/2023-06-21.md
+++ b/_columns/Stock_Of_the_Day/2023-06-21.md
@@ -3,12 +3,9 @@ layout: page
 title: Chipotle Stock, IBD Stock Of The Day, Rebounds Toward Record Highs
 image: /assets/img/stock-of-the-day/2023-06-21.jpg
 date: 2023-06-21 14:41 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:41 PM ET 06/21/2023
 
 
 
