--- a/_columns/Stock_Of_the_Day/2023-06-22.md
+++ b/_columns/Stock_Of_the_Day/2023-06-22.md
@@ -3,12 +3,9 @@ layout: page
 title: Lam Research, IBD Stock Of The Day, Seen Getting AI Spending Boost
 image: /assets/img/stock-of-the-day/2023-06-22.jpg
 date: 2023-06-22 16:35 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:35 PM ET 06/22/2023
 
 
 
