--- a/_columns/Stock_Of_the_Day/2023-06-23.md
+++ b/_columns/Stock_Of_the_Day/2023-06-23.md
@@ -3,14 +3,11 @@ layout: page
 title: Floor & Decor, Stock Of The Day, Offers Early Entry With Earnings Poised For 2024 Rebound
 image: /assets/img/stock-of-the-day/2023-06-23.jpg
 date: 2023-06-23 16:34 -0700
+author: APARNA NARAYANAN
 ---
 
 ![](https://www.investors.com/wp-content/uploads/2023/06/sotd-for-06-23-2023-desktop.png)The home improvement firm's value focus targets customers seeking savings in tough times.
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 04:34 PM ET 06/23/2023
 
 
 
