--- a/_columns/Stock_Of_the_Day/2023-06-28.md
+++ b/_columns/Stock_Of_the_Day/2023-06-28.md
@@ -3,12 +3,9 @@ layout: page
 title: HubSpot Stock Finds Support As 2023 Software Rally Looks For Second Wind
 image: /assets/img/stock-of-the-day/2023-06-28.jpg
 date: 2023-06-28 16:36 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:36 PM ET 06/28/2023
 
 
 
