--- a/_columns/Stock_Of_the_Day/2023-06-29.md
+++ b/_columns/Stock_Of_the_Day/2023-06-29.md
@@ -3,13 +3,10 @@ layout: page
 title: Visa, IBD Stock Of The Day, Clears Early Entry As Defensive Payment Play Shines
 image: /assets/img/stock-of-the-day/2023-06-29.jpg
 date: 2023-06-29 15:15 -0700
+author: JED GRAHAM
 ---
 
 ![](https://www.investors.com/wp-content/uploads/2023/06/sotd-for-06-29-2023-desktop.png)
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 03:15 PM ET 06/29/2023
-
 
 
 
