--- a/_columns/The_Big_Picture/2023-08-11.md
+++ b/_columns/The_Big_Picture/2023-08-11.md
@@ -2,17 +2,9 @@
 layout: content
 title: Stock Market Falls As Fed Minutes Loom; Nasdaq Loses This Key Level
 date: 2023-08-11 17:29 -0700
+author: MICHAEL LARKIN
 ---
 
-
-Stock Market Falls As Fed Minutes Loom; Nasdaq Loses This Key Level
-====================================================================
-
-
-
-
-* [MICHAEL LARKIN](https://www.investors.com/author/larkinm/ "Posts by MICHAEL LARKIN")
-* 05:29 PM ET 08/11/2023
 
 
 
