--- a/_columns/Stock_Of_the_Day/2023-06-06.md
+++ b/_columns/Stock_Of_the_Day/2023-06-06.md
@@ -3,12 +3,9 @@ layout: page
 title: Shopify Stock Offers New Entry Amid Expected 715% Profit Growth
 image: /assets/img/stock-of-the-day/2023-06-06.jpg
 date: 2023-06-06 16:17 -0700
+author: MICHAEL LARKIN
 ---
 
-
-
-* [MICHAEL LARKIN](https://www.investors.com/author/larkinm/ "Posts by MICHAEL LARKIN")
-* 04:17 PM ET 06/06/2023
 
 
 
