--- a/_columns/Stock_Of_the_Day/2023-06-07.md
+++ b/_columns/Stock_Of_the_Day/2023-06-07.md
@@ -3,12 +3,9 @@ layout: page
 title: Vertex Stock Flirts With Buy Point On Steady Growth Prospects
 image: /assets/img/stock-of-the-day/2023-06-07.jpg
 date: 2023-06-07 16:16 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:16 PM ET 06/07/2023
 
 
 
