--- a/_columns/Stock_Of_the_Day/2023-06-08.md
+++ b/_columns/Stock_Of_the_Day/2023-06-08.md
@@ -3,12 +3,9 @@ layout: page
 title: Floor & Decor Stock Is IBD Stock Of The Day, With Building Retailer Surging 34% In 2023
 image: /assets/img/stock-of-the-day/2023-06-08.jpg
 date: 2023-06-08 16:07 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:07 PM ET 06/08/2023
 
 
 
