--- a/_columns/Stock_Of_the_Day/2023-06-09.md
+++ b/_columns/Stock_Of_the_Day/2023-06-09.md
@@ -3,12 +3,9 @@ layout: page
 title: On Holding Springs Into Buy Range As Analyst Doubles Down
 image: /assets/img/stock-of-the-day/2023-06-09.jpg
 date: 2023-06-09 16:42 -0700
+author: JED GRAHAM
 ---
 
-
-
-* [JED GRAHAM](https://www.investors.com/author/grahamj/ "Posts by JED GRAHAM")
-* 04:42 PM ET 06/09/2023
 
 
 
