--- a/_columns/Stock_Of_the_Day/2023-06-13.md
+++ b/_columns/Stock_Of_the_Day/2023-06-13.md
@@ -3,12 +3,9 @@ layout: page
 title: How IBD Stock Of The Day Shockwave Is 'Cracking' The Code To Another Breakout
 image: /assets/img/stock-of-the-day/2023-06-13.jpg
 date: 2023-06-13 16:29 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:29 PM ET 06/13/2023
 
 
 
