--- a/_columns/Stock_Of_the_Day/2023-06-02.md
+++ b/_columns/Stock_Of_the_Day/2023-06-02.md
@@ -3,12 +3,9 @@ layout: page
 title: Stock Of The Day: Lennar Flashes Buy Signal As Homebuilders Rebound
 image: /assets/img/stock-of-the-day/2023-06-02.jpg
 date: 2023-06-02 16:49 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:49 PM ET 06/02/2023
 
 
 
