--- a/_columns/Stock_Of_the_Day/2023-06-12.md
+++ b/_columns/Stock_Of_the_Day/2023-06-12.md
@@ -3,12 +3,9 @@ layout: page
 title: Boeing Stock Flies Into Buy Zone
 image: /assets/img/stock-of-the-day/2023-06-12.jpg
 date: 2023-06-12 16:02 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:02 PM ET 06/12/2023
 
 
 
