--- a/_columns/Stock_Of_the_Day/2023-05-30.md
+++ b/_columns/Stock_Of_the_Day/2023-05-30.md
@@ -3,12 +3,9 @@ layout: page
 title: Fluence Energy Is IBD Stock Of The Day: Tesla Rival Nears Buy Point On Energy Storage Boom
 image: /assets/img/stock-of-the-day/2023-05-30.jpg
 date: 2023-05-30 16:02 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:02 PM ET 05/30/2023
 
 
 
