--- a/_columns/Stock_Of_the_Day/2023-07-07.md
+++ b/_columns/Stock_Of_the_Day/2023-07-07.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: IBD Stock Of The Day Salesforce: The 'Tectonic Shift' That Could Add $10 Billion In Sales
+title: 
+  IBD Stock Of The Day Salesforce: The 'Tectonic Shift' That Could Add $10 Billion In Sales
 image: /assets/img/stock-of-the-day/2023-07-07.jpg
 date: 2023-07-07 16:20 -0700
 author: ALLISON GATLIN
