--- a/_columns/Stock_Of_the_Day/2023-06-15.md
+++ b/_columns/Stock_Of_the_Day/2023-06-15.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Cybersecurity Firm CyberArk Races Rivals To Build Broad Identity Platform
+title: >-
+  Cybersecurity Firm CyberArk Races Rivals To Build Broad Identity Platform
 image: /assets/img/stock-of-the-day/2023-06-15.jpg
 date: 2023-06-15 17:09 -0700
 author: REINHARDT KRAUSE
