--- a/_columns/Stock_Of_the_Day/2023-06-20.md
+++ b/_columns/Stock_Of_the_Day/2023-06-20.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Housing Rebound Lifts IBD Stock Of The Day Meritage Homes To Buy Point
+title: >-
+  Housing Rebound Lifts IBD Stock Of The Day Meritage Homes To Buy Point
 image: /assets/img/stock-of-the-day/2023-06-20.jpg
 date: 2023-06-20 14:42 -0700
 author: JED GRAHAM
