--- a/_columns/Stock_Of_the_Day/2023-06-22.md
+++ b/_columns/Stock_Of_the_Day/2023-06-22.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Lam Research, IBD Stock Of The Day, Seen Getting AI Spending Boost
+title: >-
+  Lam Research, IBD Stock Of The Day, Seen Getting AI Spending Boost
 image: /assets/img/stock-of-the-day/2023-06-22.jpg
 date: 2023-06-22 16:35 -0700
 author: PATRICK SEITZ
