--- a/_columns/Stock_Of_the_Day/2023-06-23.md
+++ b/_columns/Stock_Of_the_Day/2023-06-23.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Floor & Decor, Stock Of The Day, Offers Early Entry With Earnings Poised For 2024 Rebound
+title: >-
+  Floor & Decor, Stock Of The Day, Offers Early Entry With Earnings Poised For 2024 Rebound
 image: /assets/img/stock-of-the-day/2023-06-23.jpg
 date: 2023-06-23 16:34 -0700
 author: APARNA NARAYANAN
