--- a/_columns/Stock_Of_the_Day/2023-06-26.md
+++ b/_columns/Stock_Of_the_Day/2023-06-26.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: This App-Monitoring Software Maker Finds Support Amid Nasdaq Pullback
+title: >-
+  This App-Monitoring Software Maker Finds Support Amid Nasdaq Pullback
 image: /assets/img/stock-of-the-day/2023-06-26.jpg
 date: 2023-06-26 16:22 -0700
 author: REINHARDT KRAUSE
