--- a/_columns/Stock_Of_the_Day/2023-07-03.md
+++ b/_columns/Stock_Of_the_Day/2023-07-03.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Marvell Stock: How Custom Data Center Chips Figure In AI Opportunity
+title: >-
+  Marvell Stock: How Custom Data Center Chips Figure In AI Opportunity
 image: /assets/img/stock-of-the-day/2023-07-03.jpg
 date: 2023-07-03 16:37 -0700
 author: REINHARDT KRAUSE
