--- a/_columns/Stock_Of_the_Day/2023-07-31.md
+++ b/_columns/Stock_Of_the_Day/2023-07-31.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: IBD Stock Of The Day: UiPath Blazes Trail To Improved Profits With AI Tools
+title: >-
+  IBD Stock Of The Day: UiPath Blazes Trail To Improved Profits With AI Tools
 image: /assets/img/stock-of-the-day/2023-07-31.jpg
 date: 2023-07-31 16:14 -0700
 author: PATRICK SEITZ
