--- a/_columns/Stock_Of_the_Day/2023-06-30.md
+++ b/_columns/Stock_Of_the_Day/2023-06-30.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Oracle Stock: What's Old Is New Again, Thanks To AI And Cloud Computing
+title: >-
+  Oracle Stock: What's Old Is New Again, Thanks To AI And Cloud Computing
 image: /assets/img/stock-of-the-day/2023-06-30.jpg
 date: 2023-06-30 14:20 -0700
 author: REINHARDT KRAUSE
