--- a/_columns/Stock_Of_the_Day/2023-06-07.md
+++ b/_columns/Stock_Of_the_Day/2023-06-07.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Vertex Stock Flirts With Buy Point On Steady Growth Prospects
+title: >-
+  Vertex Stock Flirts With Buy Point On Steady Growth Prospects
 image: /assets/img/stock-of-the-day/2023-06-07.jpg
 date: 2023-06-07 16:16 -0700
 author: PATRICK SEITZ
