--- a/_columns/Stock_Of_the_Day/2023-06-09.md
+++ b/_columns/Stock_Of_the_Day/2023-06-09.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: On Holding Springs Into Buy Range As Analyst Doubles Down
+title: >-
+  On Holding Springs Into Buy Range As Analyst Doubles Down
 image: /assets/img/stock-of-the-day/2023-06-09.jpg
 date: 2023-06-09 16:42 -0700
 author: JED GRAHAM
