--- a/_columns/Stock_Of_the_Day/2023-06-12.md
+++ b/_columns/Stock_Of_the_Day/2023-06-12.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Boeing Stock Flies Into Buy Zone
+title: >-
+  Boeing Stock Flies Into Buy Zone
 image: /assets/img/stock-of-the-day/2023-06-12.jpg
 date: 2023-06-12 16:02 -0700
 author: HARRISON MILLER
