--- a/_columns/Stock_Of_the_Day/2023-06-13.md
+++ b/_columns/Stock_Of_the_Day/2023-06-13.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: How IBD Stock Of The Day Shockwave Is 'Cracking' The Code To Another Breakout
+title: >-
+  How IBD Stock Of The Day Shockwave Is 'Cracking' The Code To Another Breakout
 image: /assets/img/stock-of-the-day/2023-06-13.jpg
 date: 2023-06-13 16:29 -0700
 author: ALLISON GATLIN
