--- a/_columns/Stock_Of_the_Day/2023-06-01.md
+++ b/_columns/Stock_Of_the_Day/2023-06-01.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Wingstop, IBD Stock Of The Day, Near New Buy Point After Flying 44% In 2023
+title: >-
+  Wingstop, IBD Stock Of The Day, Near New Buy Point After Flying 44% In 2023
 image: /assets/img/stock-of-the-day/2023-06-01.jpg
 date: 2023-06-01 13:35 -0700
 author: HARRISON MILLER
