--- a/_columns/Stock_Of_the_Day/2023-06-05.md
+++ b/_columns/Stock_Of_the_Day/2023-06-05.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: IBD Stock Of The Day Fortinet: Why This Top 1% Security Name Is Soaring
+title: >-
+  IBD Stock Of The Day Fortinet: Why This Top 1% Security Name Is Soaring
 image: /assets/img/stock-of-the-day/2023-06-05.jpg
 date: 2023-06-05 16:59 -0700
 author: ALLISON GATLIN
