--- a/_columns/Stock_Of_the_Day/2023-06-14.md
+++ b/_columns/Stock_Of_the_Day/2023-06-14.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Hyatt Hotels, IBD Stock Of The Day, Sets Up On Travel Recovery
+title: >-
+  Hyatt Hotels, IBD Stock Of The Day, Sets Up On Travel Recovery
 image: /assets/img/stock-of-the-day/2023-06-14.jpg
 date: 2023-06-14 13:45 -0700
 author: HARRISON MILLER
