--- a/_columns/Stock_Of_the_Day/2023-05-18.md
+++ b/_columns/Stock_Of_the_Day/2023-05-18.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Cadence Design Systems, IBD Stock Of The Day, Rebounds From Short Pullback
+title: >-
+  Cadence Design Systems, IBD Stock Of The Day, Rebounds From Short Pullback
 image: /assets/img/stock-of-the-day/2023-05-18.jpg
 date: 2023-05-18 16:25 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:25 PM ET 05/18/2023
 
 
 
