--- a/_columns/Stock_Of_the_Day/2023-05-19.md
+++ b/_columns/Stock_Of_the_Day/2023-05-19.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Life Time, IBD Stock Of The Day, Muscles Up Near Buy Point On Pickleball Buzz
+title: >-
+  Life Time, IBD Stock Of The Day, Muscles Up Near Buy Point On Pickleball Buzz
 image: /assets/img/stock-of-the-day/2023-05-19.jpg
 date: 2023-05-19 16:05 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:05 PM ET 05/19/2023
 
 
 
