--- a/_columns/Stock_Of_the_Day/2023-05-22.md
+++ b/_columns/Stock_Of_the_Day/2023-05-22.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Kinsale Capital, IBD Stock Of The Day, Sets Up Near Buy Point On Sky High Interest Rates
+title: >-
+  Kinsale Capital, IBD Stock Of The Day, Sets Up Near Buy Point On Sky High Interest Rates
 image: /assets/img/stock-of-the-day/2023-05-22.jpg
 date: 2023-05-22 16:05 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:05 PM ET 05/22/2023
 
 
 
