--- a/_columns/Stock_Of_the_Day/2023-05-23.md
+++ b/_columns/Stock_Of_the_Day/2023-05-23.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: Alamos Gold Stock Actionable As Gold Prices Pull Back
+title: >-
+  IBD Stock Of The Day: Alamos Gold Stock Actionable As Gold Prices Pull Back
 image: /assets/img/stock-of-the-day/2023-05-23.jpg
 date: 2023-05-23 14:42 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 02:42 PM ET 05/23/2023
 
 
 
