--- a/_columns/Stock_Of_the_Day/2023-05-24.md
+++ b/_columns/Stock_Of_the_Day/2023-05-24.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: IBD Stock Of The Day: Why McKesson And Its Rivals Are 'So Hot' Right Now
+title: >-
+  IBD Stock Of The Day: Why McKesson And Its Rivals Are 'So Hot' Right Now
 image: /assets/img/stock-of-the-day/2023-05-24.jpg
 date: 2023-05-24 16:45 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 04:45 PM ET 05/24/2023
 
 
 
