--- a/_columns/Stock_Of_the_Day/2023-05-25.md
+++ b/_columns/Stock_Of_the_Day/2023-05-25.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: How Smartsheet Sticks Out In The Work Management Software Market
+title: >-
+  How Smartsheet Sticks Out In The Work Management Software Market
 image: /assets/img/stock-of-the-day/2023-05-25.jpg
 date: 2023-05-25 17:05 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 05:05 PM ET 05/25/2023
 
 
 
