--- a/_columns/Stock_Of_the_Day/2023-05-26.md
+++ b/_columns/Stock_Of_the_Day/2023-05-26.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Arista Basks In The Glow Of Nvidia AI Outlook, Artificial Intelligence Stocks
+title: >-
+  Arista Basks In The Glow Of Nvidia AI Outlook, Artificial Intelligence Stocks
 image: /assets/img/stock-of-the-day/2023-05-26.jpg
 date: 2023-05-26 16:43 -0700
 author: REINHARDT KRAUSE
