--- a/_columns/Stock_Of_the_Day/2023-05-30.md
+++ b/_columns/Stock_Of_the_Day/2023-05-30.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Fluence Energy Is IBD Stock Of The Day: Tesla Rival Nears Buy Point On Energy Storage Boom
+title: >-
+  Fluence Energy Is IBD Stock Of The Day: Tesla Rival Nears Buy Point On Energy Storage Boom
 image: /assets/img/stock-of-the-day/2023-05-30.jpg
 date: 2023-05-30 16:02 -0700
 author: KIT NORTON
