--- a/_columns/Stock_Of_the_Day/2023-05-31.md
+++ b/_columns/Stock_Of_the_Day/2023-05-31.md
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: Feisty Extreme Networks Taking Share From Bigger Rivals Cisco, HPE
+title: >-
+  Feisty Extreme Networks Taking Share From Bigger Rivals Cisco, HPE
 image: /assets/img/stock-of-the-day/2023-05-31.jpg
 date: 2023-05-31 16:12 -0700
 author: REINHARDT KRAUSE
