--- a/_columns/Stock_Of_the_Day/2023-05-17.md
+++ b/_columns/Stock_Of_the_Day/2023-05-17.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: TJX, IBD Stock Of The Day, Flirts With Buy Point After Earnings
+title: >-
+  TJX, IBD Stock Of The Day, Flirts With Buy Point After Earnings
 image: /assets/img/stock-of-the-day/2023-05-17.jpg
 date: 2023-05-17 16:49 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:49 PM ET 05/17/2023
 
 
 
