--- a/_columns/Stock_Of_the_Day/2023-05-03.md
+++ b/_columns/Stock_Of_the_Day/2023-05-03.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: AVAV, Stock Of The Day, Targets Early Entry As 'Suicide Drones' Take Off
+title: >-
+  AVAV, Stock Of The Day, Targets Early Entry As 'Suicide Drones' Take Off
 image: /assets/img/stock-of-the-day/2023-05-03.jpg
 date: 2023-05-03 16:56 -0700
+author: APARNA NARAYANAN
 ---
 
-
-
-* [APARNA NARAYANAN](https://www.investors.com/author/narayanana/ "Posts by APARNA NARAYANAN")
-* 04:56 PM ET 05/03/2023
 
 
 
