--- a/_columns/Stock_Of_the_Day/2023-05-04.md
+++ b/_columns/Stock_Of_the_Day/2023-05-04.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Dynatrace Ramps Up Automation, AI Tools In 'Observability' Battle
+title: >-
+  Dynatrace Ramps Up Automation, AI Tools In 'Observability' Battle
 image: /assets/img/stock-of-the-day/2023-05-04.jpg
 date: 2023-05-04 16:41 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:41 PM ET 05/04/2023
 
 
 
