--- a/_columns/Stock_Of_the_Day/2023-05-05.md
+++ b/_columns/Stock_Of_the_Day/2023-05-05.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Mastercard Stock, IBD Stock Of The Day, Makes Bullish Move In Buy Zone
+title: >-
+  Mastercard Stock, IBD Stock Of The Day, Makes Bullish Move In Buy Zone
 image: /assets/img/stock-of-the-day/2023-05-05.jpg
 date: 2023-05-05 16:54 -0700
+author: HARRISON MILLER
 ---
 
-
-
-* [HARRISON MILLER](https://www.investors.com/author/millerh/ "Posts by HARRISON MILLER")
-* 04:54 PM ET 05/05/2023
 
 
 
