--- a/_columns/Stock_Of_the_Day/2023-05-08.md
+++ b/_columns/Stock_Of_the_Day/2023-05-08.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Netflix, IBD Stock Of The Day, Nears Buy Point After Bucking Downtrend
+title: >-
+  Netflix, IBD Stock Of The Day, Nears Buy Point After Bucking Downtrend
 image: /assets/img/stock-of-the-day/2023-05-08.jpg
 date: 2023-05-08 16:14 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:14 PM ET 05/08/2023
 
 
 
