--- a/_columns/Stock_Of_the_Day/2023-05-09.md
+++ b/_columns/Stock_Of_the_Day/2023-05-09.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Salesforce, IBD Stock Of The Day, Tests Fresh Buy Point
+title: >-
+  Salesforce, IBD Stock Of The Day, Tests Fresh Buy Point
 image: /assets/img/stock-of-the-day/2023-05-09.jpg
 date: 2023-05-09 16:28 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:28 PM ET 05/09/2023
 
 
 
