--- a/_columns/Stock_Of_the_Day/2023-05-10.md
+++ b/_columns/Stock_Of_the_Day/2023-05-10.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Flywire, IBD Stock Of The Day, Surges After First-Quarter Earnings
+title: >-
+  Flywire, IBD Stock Of The Day, Surges After First-Quarter Earnings
 image: /assets/img/stock-of-the-day/2023-05-10.jpg
 date: 2023-05-10 16:54 -0700
+author: REINHARDT KRAUSE
 ---
 
-
-
-* [REINHARDT KRAUSE](https://www.investors.com/author/krauser/ "Posts by REINHARDT KRAUSE")
-* 04:54 PM ET 05/10/2023
 
 
 
