--- a/_columns/Stock_Of_the_Day/2023-05-12.md
+++ b/_columns/Stock_Of_the_Day/2023-05-12.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Ballooning Sales, Profit Send Shockwave Into An Early Breakout
+title: >-
+  Ballooning Sales, Profit Send Shockwave Into An Early Breakout
 image: /assets/img/stock-of-the-day/2023-05-12.jpg
 date: 2023-05-12 13:13 -0700
+author: ALLISON GATLIN
 ---
 
-
-
-* [ALLISON GATLIN](https://www.investors.com/author/gatlina/ "Posts by ALLISON GATLIN")
-* 01:13 PM ET 05/12/2023
 
 
 
