--- a/_columns/Stock_Of_the_Day/2023-05-15.md
+++ b/_columns/Stock_Of_the_Day/2023-05-15.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: Lam Research Passes Buy Point Despite Chip-Gear Spending Drop
+title: >-
+  Lam Research Passes Buy Point Despite Chip-Gear Spending Drop
 image: /assets/img/stock-of-the-day/2023-05-15.jpg
 date: 2023-05-15 16:22 -0700
+author: PATRICK SEITZ
 ---
 
-
-
-* [PATRICK SEITZ](https://www.investors.com/author/seitzp/ "Posts by PATRICK SEITZ")
-* 04:22 PM ET 05/15/2023
 
 
 
