--- a/_columns/Stock_Of_the_Day/2023-05-16.md
+++ b/_columns/Stock_Of_the_Day/2023-05-16.md
@@ -1,14 +1,12 @@
 ---
 layout: page
-title: HCA Healthcare, IBD Stock Of The Day, Nears New Buy Point As Medical Stocks Hold Up
+title: >-
+  HCA Healthcare, IBD Stock Of The Day, Nears New Buy Point As Medical Stocks Hold Up
 image: /assets/img/stock-of-the-day/2023-05-16.jpg
 date: 2023-05-16 16:02 -0700
+author: KIT NORTON
 ---
 
-
-
-* [KIT NORTON](https://www.investors.com/author/nortonk/ "Posts by KIT NORTON")
-* 04:02 PM ET 05/16/2023
 
 
 
